c4prj2_input/grade.txt
Grading at Thu Mar 11 09:51:38 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:16:9: error: implicit declaration of function ‘isspace’ [-Werror=implicit-function-declaration]
     if (isspace(str[i]) ){
         ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
